# Connect-4-w-AI

./: .gitignore  CMakeLists.txt  README.md  board.cpp  board.hpp  main.cpp  opponent.cpp  opponent.hpp
include/: board.hpp  opponent.hpp
src/: board.cpp  main.cpp  opponent.cpp
